# adam

./: .env.template  .gitignore  CONTRIBUTING.md  README.md  gg  pdf-validation-benchmark.md  pyproject.toml  transcription-report.md
_export_worker_for_adam/adam_api/routers/: datasets_pdf_validation_SNIPPET.py  documents_page_image_SNIPPET.py
_export_worker_for_adam/adam_worker/: main.py  page_image_worker.py
_export_worker_for_adam/tests/unit/: test_page_image_worker.py  test_pdf_render.py  test_router_datasets_pdf_rejection.py
_export_worker_for_nota/: README.md
_export_worker_for_nota/adam_core/utils/: pdf_render.py
_export_worker_for_nota/adam_worker/: base_worker.py  main.py  page_image_worker.py
_export_worker_for_nota/nota_api/routers/: datasets_pdf_validation_SNIPPET.py  documents.py  documents_page_image_SNIPPET.py
_export_worker_for_nota/nota_core/utils/: pdf_render.py
_export_worker_for_nota/nota_worker/: base_worker.py  main.py  page_image_worker.py
_export_worker_for_nota/tests/unit/: test_page_image_worker.py  test_pdf_render.py  test_router_documents.py  test_router_documents_page_image.py
_extracted/: Pds1-report.md  Pds2-report.md  Pds4-report.md  Pds5-report.md
scripts/: _restore_all.py  download_swagger.ps1  form_demo_v0.3.json  run-checks.ps1  run_dev.py  seed.py  test_connection.py  test_fixture_all_types.json  test_with_json.py
src/adam_api/: main.py
src/adam_api/core/: config.py
src/adam_api/dependencies/: auth.py  db.py
src/adam_api/routers/: admin.py  datasets.py  documents.py  files.py  jobs.py  ocr.py  organisations.py  projects.py  schemas.py  users.py
src/adam_api/services/: consensus.py  ingestion.py
src/adam_core/: README.md  alembic.ini
src/adam_core/core/: config.py
src/adam_core/db/: base.py  scoping.py  session.py
src/adam_core/enums/: ocr.py  roles.py  states.py  status.py
src/adam_core/migrations/: env.py
src/adam_core/migrations/versions/: 20260602_1551_6452f2c7b5b5_update_enums.py  (+7 more)
src/adam_core/models/: __init__.py  dataset.py  doc_schema.py  document.py  document_field.py  field_proposal.py  field_spec.py  file.py  job.py  ocr_result.py  organisation.py  project.py  user.py  user_project.py
src/adam_core/schemas/: __init__.py  document.py  interface_contract.py  responses.py
src/adam_core/utils/: exceptions.py  field_parser.py  hashing.py  logging.py  pdf_render.py  volumetry.py
src/adam_worker/: base_worker.py  consensus_worker.py  main.py  page_image_worker.py
src/adam_worker/src/: consensus_worker.py
stubs/exa_logger/: formatter.py
tests/unit/: conftest.py  test_base_worker.py  test_exceptions.py  test_field_parser.py  test_hashing.py  test_interface_contract.py  test_logging.py  test_org_scoping.py  test_page_image_worker.py  test_pdf_render.py  test_router_datasets.py  test_router_documents.py  test_router_documents_job_progress.py  test_router_files.py  test_router_jobs.py  test_router_ocr.py  test_router_organisations.py  test_router_projects.py  test_router_schemas.py  test_router_users.py  test_schemas_responses.py  test_service_consensus.py  test_service_ingestion.py  test_session.py
