[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adam"
version = "0.1.0"
description = "ADAM - Annotation et Donnees Automatisees"
authors = [
  {name = "Equipe ADAM", email = "dev@example.com"}
]
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.12"
keywords = ["tests automatises", "ocr", "labellisation", "annotation"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Private :: Do Not Upload",
]
dependencies = [
  "sqlalchemy[asyncio]>=2.0.32",
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "psycopg2-binary>=2.9.9",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.3",
  "python-multipart>=0.0.9",
  "aiofiles>=23.2.1",
  "pydantic>=2.7.4",
  "pydantic-settings>=2.3.4",
  "python-jose[cryptography]>=3.3.0",
  "pymupdf>=1.24.0",
  "pypdf>=4.2.0",
]

[project.optional-dependencies]
internal = [
  "exa-pie>=1.4.0",
  "exa-logger>=2.3.0",
]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "black>=24.0.0",
  "isort>=5.13.0",
  "pylint>=3.2.0",
  "bandit>=1.7.0",
  "interrogate>=1.7.0",
  "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/adam_core", "src/adam_api", "src/adam_worker"]

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ["migrations", "scripts"]
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
tests = ["B201", "B301"]
skips = ["B101", "B601", "B607"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 95
exclude = ["setup.py", "docs", "build", "scripts"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
color = true
generate-badge = "."
badge-format = "svg"

[tool.pylint.master]
fail-under = 9.0
ignore-paths = [
    "src/adam_core/models",
    "src/adam_core/migrations",
]

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "duplicate-code",
]

[tool.pylint.design]
max-returns = 8

[tool.pylint.basic]
good-names = ["db", "id", "e", "f", "_engine", "_async_session_factory"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/enums/*",
    "*/migrations/*",
    "*/models/*",
    "scripts/*",
    "src/adam_core/db/base.py",
    "src/adam_core/utils/volumetry.py",
    "src/adam_api/main.py",
    "src/adam_api/dependencies/db.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--tb=short"
